--- a/src/api/scheme/Manifest.scheme.json
+++ b/src/api/scheme/Manifest.scheme.json
@@ -1,73 +1,68 @@
 {
-    "$schema": "http://json-schema.org/draft-07/schema#",
-    "$ref": "#/definitions/Manifest",
-    "definitions": {
-        "Manifest": {
+  "$schema": "http://json-schema.org/draft-07/schema#",
+  "$ref": "#/definitions/Manifest",
+  "definitions": {
+    "Manifest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "landing_date": {
+          "type": "string"
+        },
+        "launch_date": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        },
+        "max_sol": {
+          "type": "number"
+        },
+        "max_date": {
+          "type": "string"
+        },
+        "total_photos": {
+          "type": "number"
+        },
+        "photos": {
+          "type": "array",
+          "items": {
             "type": "object",
             "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "landing_date": {
-                    "type": "string"
-                },
-                "launch_date": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "max_sol": {
-                    "type": "number"
-                },
-                "max_date": {
-                    "type": "string"
-                },
-                "total_photos": {
-                    "type": "number"
-                },
-                "photos": {
-                    "type": "array",
-                    "items": {
-                        "type": "object",
-                        "properties": {
-                            "sol": {
-                                "type": "number"
-                            },
-                            "earth_date": {
-                                "type": "string"
-                            },
-                            "total_photos": {
-                                "type": "number"
-                            },
-                            "cameras": {
-                                "type": "array",
-                                "items": {
-                                    "type": "string"
-                                }
-                            }
-                        },
-                        "required": [
-                            "sol",
-                            "earth_date",
-                            "total_photos",
-                            "cameras"
-                        ],
-                        "additionalProperties": false
-                    }
+              "sol": {
+                "type": "number"
+              },
+              "earth_date": {
+                "type": "string"
+              },
+              "total_photos": {
+                "type": "number"
+              },
+              "cameras": {
+                "type": "array",
+                "items": {
+                  "type": "string"
                 }
+              }
             },
-            "required": [
-                "name",
-                "landing_date",
-                "launch_date",
-                "status",
-                "max_sol",
-                "max_date",
-                "total_photos",
-                "photos"
-            ],
+            "required": ["sol", "earth_date", "total_photos", "cameras"],
             "additionalProperties": false
+          }
         }
+      },
+      "required": [
+        "name",
+        "landing_date",
+        "launch_date",
+        "status",
+        "max_sol",
+        "max_date",
+        "total_photos",
+        "photos"
+      ],
+      "additionalProperties": false
     }
+  }
 }
