--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project",
+  "name": "project",
   "version": "1.0.0",
   "description": "Project react app",
   "scripts": {
@@ -8,12 +8,14 @@
     "build": "NODE_ENV=production webpack --mode=production",
     "lint": "eslint src/**/*.ts{,x}",
     "prepare": "husky install",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "test": "nyc ./node_modules/.bin/_mocha 'test/**/*.test.ts'"
   },
-  "author": "Alekseev K.A.",
+  "author": "Susskiy I.I.",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "chai-json-schema": "^1.5.1",
     "classnames": "^2.3.1",
     "include-media": "^1.4.10",
     "react": "^17.0.1",
@@ -25,8 +27,11 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "husky": "^7.0.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@testing-library/react": "^12.1.2",
+    "@types/chai": "^4.3.0",
+    "@types/chai-json-schema": "^1.4.6",
+    "@types/mocha": "^9.0.0",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.0.5",
     "@types/react-modal": "^3.12.1",
@@ -35,6 +40,7 @@
     "@types/webpack": "4.1.4",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "chai": "^4.3.4",
     "css-loader": "^4.3.0",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "eslint": "7.2.0",
@@ -49,7 +55,10 @@
     "eslint-plugin-react-hooks": "1.7.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
+    "husky": "^7.0.4",
     "mini-css-extract-plugin": "^1.3.5",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "process": "^0.11.10",
@@ -63,6 +72,7 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "6.2.1",
+    "ts-node": "^10.4.0",
     "typescript": "4.1.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.20.1",
