--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-select": "^5.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
