--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "store/*": ["src/store/*"],
       "image/*": ["src/image/*"],
       "scene/*": ["src/scene/*"],
-      "api/*": ["src/api/*"]
+      "api/*": ["src/api/*"],
+      "utils/*": ["src/utils/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "./custom.d.ts"],
