--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Susskiy I.I.",
   "license": "ISC",
   "dependencies": {
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
     "axios": "^0.21.1",
     "chai-json-schema": "^1.5.1",
     "classnames": "^2.3.1",
