--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve",
     "prod": "NODE_ENV=production webpack serve --mode=production",
-    "build": "SET NODE_ENV=production webpack --mode=production",
+    "build": "set NODE_ENV=production&& webpack --mode=production",
     "lint": "eslint src/**/*.ts{,x}",
     "prepare": "husky install",
     "prettier": "prettier --write .",
